[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/tiles/conveyor_belt_midl_v.png" type="Texture" id=1]
[ext_resource path="res://sprites/tiles/conveyor_end_v.png" type="Texture" id=2]
[ext_resource path="res://sprites/tiles/conveyor_midl_v.png" type="Texture" id=3]
[ext_resource path="res://sprites/tiles/conveyor_beg_v.png" type="Texture" id=4]
[ext_resource path="res://scripts/road.gd" type="Script" id=5]
[ext_resource path="res://scripts/conveyor_tile_vertical.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "begin",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "end",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "midle",
"speed": 5.0
} ]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment(){
	vec2 shift = UV;
	shift.x += TIME * scroll_speed;
	vec4 color = texture(TEXTURE,shift);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = null

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 31 )

[node name="conveyor_tile_down" type="AnimatedSprite"]
rotation = 1.5708
frames = SubResource( 5 )
animation = "midle"
offset = Vector2( 32, 32 )
script = ExtResource( 6 )

[node name="belt" type="TextureRect" parent="."]
show_behind_parent = true
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 2
script = ExtResource( 5 )

[node name="moving_area" type="Area2D" parent="." groups=["conveyor_right"]]
visible = false

[node name="shape" type="CollisionShape2D" parent="moving_area"]
position = Vector2( 16, 32 )
scale = Vector2( 0.5, 1 )
shape = SubResource( 4 )

[connection signal="area_entered" from="moving_area" to="." method="_on_moving_area_area_entered"]
[connection signal="area_exited" from="moving_area" to="." method="_on_moving_area_area_exited"]
